--- a/main.tex
+++ b/main.tex
@@ -353,9 +353,9 @@ Other assumptions that if changed, requirements may need to be updated:
 		\end{description}
     
         \item Customer Support (DealCheck) \#2 \\
-            7i. System should notify users when expert analysis is unavailable and recommend retrying later.
+            \textbf{7i.} System should notify users when expert analysis is unavailable and recommend retrying later.
         \item Marketing (DealCheck) \#3 \\
-            9i. System should suggest similar vehicles with better historical prices.
+            \textbf{9i.} System should suggest similar vehicles with better historical prices.
         \item Car Manufacturers \#4 \\
             NA
         \item Car dealership staff \#5 \\
